# sherlock

./: .gitignore  CHANGELOG.md  pyproject.toml  requirements.txt  setup.py  site_list.py
.github/workflows/: main.yml  nightly.yml  publish-to-test-pypi.yml  pull_request.yml
sherlock/: __main__.py  argument_parser.py  notify.py  result.py  sherlock.py  sites.py  utils.py
sherlock/resources/: data.json
sherlock/tests/: all.py  base.py  test_multiple_usernames.py
tests/: base.py  test_all.py  test_multiple_usernames.py
