[project]
name = "sherlock"
version = "0.14.2"
description = "Sherlock: Find Usernames Across Social Networks"
license = "MIT License"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
